--- a/notebooks/guc2.ipynb
+++ b/notebooks/guc2.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# GUC2 – Insights generieren\n",
     "\n",
-    "- Antworten generiert mit fine-funed GPT-4 \"GPT Data Analysis\" via ChatGPT.\n",
+    "- Antworten generiert mit fine-funed GPT-4 \"Data Analysis\" via ChatGPT.\n",
     "- Beispielhaft an der Datei Regionalwerkstatt_Nord\n",
     "- 3 Prompts"
    ]
@@ -50,8 +50,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 5-10 Key-Insights reichen für die Evaluation.\n",
-    "\n",
     "guc2_key_insights = \"\"\"\n",
     "Deine Aufgabe besteht darin sogenannte Key-Insights zu generieren.\n",
     "- Key-Insights fassen die Antwort einer Leitfrage in Spalte \"Leitfrage\" auf die wichtigsten Informationen in 20-45 Wörter zusammen.\n",
@@ -129,9 +127,15 @@
    "outputs": [],
    "source": [
     "guc2_kategorie_insights = \"\"\"\n",
-    "\n",
-    "<TODO: Zusammenfassung der Key-Insights: 1 Key-Insight pro Kategorie>\n",
-    "\n",
+    "Fokusiere dich bei deiner Analyse darauf, dass dein Ergebnis alle Daten beinhaltet.\n",
+    "Bearbeite dazu folgende Aufgabe Schritt für Schritt und generiere deine fertige Analyse lückenlos im JSON Format mit folgender Struktur:\n",
+    "{\n",
+    "    \"Datei\": <Dateiname>,\n",
+    "    \"1,2\": [{<Kategorie>: <Zusammenfassung>]}]\n",
+    "}\n",
+    "1. Gruppiere alle Key-Insights in der Spalte \"Insight\" nach der zugehörigen Kategorie in der Spalte \"Kategorie\" und update entsprechend das JSON.\n",
+    "2. Fasse pro Gruppe die wichtigsten Erkentnisse in 1-2 Sätzen zusammen und update entsprechend das JSON.\n",
+    "3. Gebe in 1 Satz an wie ich das Prompt optimieren kann.\n",
     "\"\"\""
    ]
   }
