--- a/notebooks/guc1.ipynb
+++ b/notebooks/guc1.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# GUC1 – Analyse von Leitfragen Status Quo / Momente\n",
     "\n",
-    "- Antworten generiert mit fine-funed GPT-4 \"GPT Data Analysis\" via ChatGPT.\n",
+    "- Antworten generiert mit fine-funed GPT-4 \"Data Analysis\" via ChatGPT.\n",
     "- Beispielhaft an der Datei Regionalwerkstatt_Nord\n",
     "- 12 Prompts"
    ]
