--- a/notebooks/guc2.ipynb
+++ b/notebooks/guc2.ipynb
@@ -37,7 +37,7 @@
     "\n",
     "Du bist Teil des Teams der \"Hans Sauer Stiftung\" und sollst nun die Ergebnisse verarbeiten.\n",
     "\n",
-    "Sage \"Bereit\", wenn du bereit bist für eine Aufgabe.\n",
+    "Extrahiere die Überschrift pro Spalte in der Tabelle und sage \"Bereit\", wenn du bereit bist für eine Aufgabe.\n",
     "\"\"\"\n",
     "\n",
     "# GPT:\n",
@@ -50,11 +50,146 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# WIP (Meli Review)\n",
     "guc2_key_insights = \"\"\"\n",
+    "Deine Aufgabe besteht darin sogenannte Insights zu erstellen.\n",
+    "\n",
+    "Fokusiere dich bei der Erstellung der Insights darauf, dass dein Ergebnis die folgenden 3 Regeln einhält:\n",
+    "i) Ein Insight extrahiert den relevanten und prägnanten Inhalt einer Zeile in den Spalten \"Titel des Beispiels\", \"1) Beschreibe Dein konkretes Beispiel.\", \"2) Was läuft gut oder schlecht?\", \"3) Woran liegt es, dass es so läuft?\" zu einer Kernaussage in 20-45 Wörter.\n",
+    "ii) Konkrete Bezeichnungen wie zum Beispiel Ort und Name müssen in dem Insight enthalten sein. \n",
+    "iii) Insights müssen einheitlich wie folgt strukturiert sein: \"<A> + [WEIL, UND, ABER, DESWEGEN, DARUM] + <B> + [WEIL, UND, ABER, DESWEGEN, DARUM] + <C>\". <B> und <C> sind optional. \n",
+    "\n",
+    "Hier wurden bereits 2 Insights auf Basis der Regeln und Daten aus Zeile 2 und 4 erstellt:\n",
+    "{\n",
+    "    \"Aufgabe\": \"Erstelle einen Insight für Zeile 2\",\n",
+    "    \"Antwort\": {\n",
+    "        \"Datei\": <Dateiname>,\n",
+    "        \"Zeile\": 2,\n",
+    "        \"Insight\": \"Besonders in Stadtteilen in denen Kinder ein höheres Maß an sprachlicher Förderung benötigen bleibt diesen der Zugang oft verwährt WEIL es unter anderem auch stark vom Einsatz der Eltern abhängt UND diese brauchen aber mehr Unterstützung.\"  \n",
+    "    },\n",
+    "    \"Aufgabe\": \"Erstelle einen Insight für Zeile 4\",\n",
+    "    \"Antwort\": {\n",
+    "        \"Datei\": <Dateiname>,\n",
+    "        \"Zeile\": 4,\n",
+    "        \"Insight\": \"An meiner Berufsschule gibt es die Empfehlung, 5 Minuten \"Bürogymnastik\" in den Unterricht zu integrieren ABER die Lehrkräfte wollen keine Unterrichtszeit dafür opfern.\"\n",
+    "    },\n",
+    "}\n",
+    "\n",
+    "Bearbeite nun folgende Aufgabe Schritt für Schritt:\n",
+    "1. Erstelle einen Insight für Zeile 8\n",
+    "2. Gebe in 1 Satz an wie ich das Prompt optimieren kann.\n",
+    "\"\"\"\n",
+    "\n",
+    "# GPT:\n",
+    "# ## Insight für Zeile 8:\n",
+    "#\n",
+    "\n",
+    "# USER:\n",
+    "# Erstelle einen Insight für Zeile 6.\n",
+    "\n",
+    "# GPT:\n",
+    "# ## Insight für Zeile 6:\n",
+    "# \n",
+    "\n",
+    "# USER:\n",
+    "# Erstelle einen Insight für Zeile 7.\n",
+    "\n",
+    "# GPT:\n",
+    "# ## Insight für Zeile 7:\n",
+    "# \n",
+    "\n",
+    "# USER:\n",
+    "# Erstelle jeweils einen Insight für Zeile 9 und 10.\n",
+    "\n",
+    "# GPT:\n",
+    "# ## Insight für Zeile 9:\n",
+    "#\n",
+    "#\n",
+    "# ## Insight für Zeile 10:\n",
+    "#"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "guc2_kategorie_insights = \"\"\"\n",
+    "Fokusiere dich bei deiner Analyse darauf, dass dein Ergebnis alle Daten beinhaltet.\n",
+    "Bearbeite dazu folgende Aufgabe Schritt für Schritt und generiere deine fertige Analyse lückenlos im JSON Format mit folgender Struktur:\n",
+    "{\n",
+    "    \"Datei\": <Dateiname>,\n",
+    "    \"1,2\": [{<Kategorie>: <Zusammenfassung>]}]\n",
+    "}\n",
+    "1. Gruppiere alle Key-Insights in der Spalte \"Insight\" nach der zugehörigen Kategorie in der Spalte \"Kategorie\" und update entsprechend das JSON.\n",
+    "2. Fasse pro Gruppe die wichtigsten Erkentnisse in 1-2 Sätzen zusammen und update entsprechend das JSON.\n",
+    "3. Gebe in 1 Satz an wie ich das Prompt optimieren kann.\n",
+    "\"\"\"\n",
+    "\n",
+    "# GPT:\n",
+    "# ## Analyseergebnisse:\n",
+    "# {\n",
+    "#     \"Datei\": \"220714_RW2_Nord_Status_Quo.ods\",\n",
+    "#     \"1,2\": [\n",
+    "#         {\n",
+    "#             \"Bildungsgerechtigkeit\":\n",
+    "#             \"Besonders in Stadtteilen in denen Kinder ein höheres Maß an sprachlicher Förderung benötigen bleibt diesen der Zugang oft verwährt \n",
+    "#              WEIL es unter anderem auch stark vom Einsatz der Eltern abhängt \n",
+    "#              UND diese brauchen aber mehr Unterstützung. Gerade in der Unter- und Mittelstufe werden die Klassen permanent neu zusammengestellt\n",
+    "#              DADURCH gibt es zu wenig Zeit, sich zu orientieren und sich mit nicht-schulische Themen und Teambildung auseinanderzusetzten\n",
+    "#              DESHALB bräuchte es wöchentlich 1 Stunde Klassenzeit, in der die Kinder und Jugendlichen lernen, im Plenum zu diskutieren, Themen respektvoll vorzutragen und konstruktiv Kritik zu üben. \n",
+    "#                Ein Schulforum kann dabei helfen, die Zusammenarbeit zwischen Elternbeiräten, Klassenelternsprecher*innen, Schüler*innen (SMV) und Lehrkräften zu verbessern\n",
+    "#              WEIL Informationen ausgetauscht werden,\n",
+    "#              ABER diese Personen müssen  immer wieder aktiviert werden.\"\n",
+    "#         },\n",
+    "#         {\n",
+    "#             \"Bildungsinhalte\":\n",
+    "#             \"Trotz Vorliegen des Übertritts-Zeugnisses haben Kinder aus Familien mit Migrationshintergrund eine geringere Chance auf einen Gymnasiums-Platz\n",
+    "#              WEIL es im Münchner Norden zu wenig Gymnasien gibt\n",
+    "#              UND Sprachbarrieren der Eltern eine Barriere bei formellen Notwendigkeiten darstellen. An meiner Berufsschule gibt es die Empfehlung, 5 Minuten 'Bürogymnastik' in den Unterricht zu integrieren\n",
+    "#              ABER die Lehrkräfte wollen keine Unterrichtszeit dafür opfern. Die Zusammenarbeit zwischen 'Gesund vor Ort' (GSR) und dem lokalen Bildungsmanagement in der Gesundheitsbildung- und förderung funktioniert gut \n",
+    "#              WEIL beide Seiten offen für Kooperation sind, Projekte gemeinsam finanziert, koordiniert und Expertisen gebündelt werden \n",
+    "#              DESHALB steigt die Qualität der Angebote.\"\n",
+    "#         },\n",
+    "#         {\n",
+    "#             \"Bildungsorte\":\n",
+    "#             \"Für die Ganztagsbetreuung in Grundschulen nach dem Lernhauskonzept bedarf es einer intensiven Abstimmung – räumlich und pädagogisch – \n",
+    "#              ABER in vielen Bereichen fehlt Kommunikation und die erwartete Kooperation zwischen Schule und Träger könnte besser sein \n",
+    "#              WEIL Informationswege nicht klar sind und von der Schulleitung zu wenig klare Informationen kommen Für die Ganztagsbetreuung in Grundschulen nach dem Lernhauskonzept bedarf es einer intensiven Abstimmung \n",
+    "#              ABER es wird kein zusätzliches Stundenkontingent bereitgestellt. Sportplätze (Hallen und Schulhöfe) bleiben nach Schulende meist geschlossen \n",
+    "#              WEIL die Betreuung  oft an den Hausmeister*innen und den verantwortlichen Sportwarten scheitert \n",
+    "#              WEIL diese zu viele Zuständigkeiten haben und nach Dienstschluss nicht arbeiten möchten.\"\n",
+    "#         },\n",
+    "#         {\n",
+    "#             \"Digitalisierung \":\n",
+    "#             \"Zunehmende Digitalisierung des Unterrichts und Homeschooling setzen eine hohe Medienkompetenz der Lehrkräfte voraus \n",
+    "#              ABER es fehlt das Interesse und die Bereitschaft, sich mit den 'neuen' Medien auseinanderzusetzen \n",
+    "#              UND auch Fortbildungsmöglichkeiten. Viele Prozesse in der Schule ließen sich besser digitalisieren (z. B. Verwaltung von Schüler*innengruppen, Workflow zum Vorrücken am Jahresende, Korrenspondenz mit Eltern usw.) \n",
+    "#              ABER Schulen haben – trotz individueller Bedürfnisse – keine digitale Autonomie, dürfen Software nicht selbst einkaufen und einsetzen \n",
+    "#              DESHALB ist die Hardwarebeschaffung sehr umständlich und dauert oft Jahre und Infrastruktur wie WLAN ist immer noch unzureichend. Wir Schüler*innen interessieren uns nicht für den IT-Unterricht oder verzweifeln daran mit schlechten Noten \n",
+    "#              WEIL die Lehrkräfte nicht richtig mit der Technik umgehen können\n",
+    "#              UND der Bezug zum echten Leben fehlt.\"\n",
+    "#         }\n",
+    "#     ]\n",
+    "# }\n",
+    "#\n",
+    "# ## Optimierung des Prompts:\n",
+    "# Es wäre hilfreich, mehr Kontext über die spezifischen Anforderungen und das gewünschte Detailniveau \n",
+    "# der Zusammenfassungen zu erhalten. Dies würde eine gezieltere und relevantere Analyse ermöglichen.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "guc2_key_insights_OLD = \"\"\"\n",
     "Deine Aufgabe besteht darin sogenannte Key-Insights zu generieren.\n",
     "- Key-Insights fassen die Antwort einer Leitfrage in Spalte \"Leitfrage\" auf die wichtigsten Informationen in 20-45 Wörter zusammen.\n",
     "- Die Antwort besteht aus den Spalten \"Titel des Beispiels\", \"1) Beschreibe Dein konkretes Beispiel.\", \"2) Was läuft gut oder schlecht?\", \"3) Woran liegt es, dass es so läuft?\".\n",
-    "- Key-Insights sind einheitlich wie folgt struktur: \"<Kernaussage A> + [WEIL, UND, ABER, DESWEGEN, DARUM] + <Kernaussage B> + [WEIL, UND, ABER, DESWEGEN, DARUM] + <Kernaussage C>\".\n",
+    "- Key-Insights sind einheitliche wie folgt struktur: \"<Kernaussage A> + [WEIL, UND, ABER, DESWEGEN, DARUM] + <Kernaussage B> + [WEIL, UND, ABER, DESWEGEN, DARUM] + <Kernaussage C>\".\n",
     "- Die <Kernaussage B> und <Kernaussage C> sind optional. Wird zum Beispiel auf <Kernaussage C> verzichtet sieht die Struktur wie folgt aus: \"<Kernaussage A> + [WEIL, UND, ABER, DESWEGEN, DARUM] + <Kernaussage B>\".\n",
     "\n",
     "Bearbeite die Aufgabe Schritt für Schritt und fokusiere dich pro Key-Insight auf den dazugehörigen Inhalt einer Zeile.\n",
@@ -118,25 +253,6 @@
     "# Diskriminierung in Mittelschulen wird oft übersehen,\n",
     "# WEIL zu wenig Aufklärung und zu großer Einfluss von Vorurteilen bestehen,\n",
     "# DESWEGEN müssen gezielte Aufklärungsmaßnahmen eingeführt werden."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "guc2_kategorie_insights = \"\"\"\n",
-    "Fokusiere dich bei deiner Analyse darauf, dass dein Ergebnis alle Daten beinhaltet.\n",
-    "Bearbeite dazu folgende Aufgabe Schritt für Schritt und generiere deine fertige Analyse lückenlos im JSON Format mit folgender Struktur:\n",
-    "{\n",
-    "    \"Datei\": <Dateiname>,\n",
-    "    \"1,2\": [{<Kategorie>: <Zusammenfassung>]}]\n",
-    "}\n",
-    "1. Gruppiere alle Key-Insights in der Spalte \"Insight\" nach der zugehörigen Kategorie in der Spalte \"Kategorie\" und update entsprechend das JSON.\n",
-    "2. Fasse pro Gruppe die wichtigsten Erkentnisse in 1-2 Sätzen zusammen und update entsprechend das JSON.\n",
-    "3. Gebe in 1 Satz an wie ich das Prompt optimieren kann.\n",
-    "\"\"\""
    ]
   }
  ],
