--- a/notebooks/guc3.ipynb
+++ b/notebooks/guc3.ipynb
@@ -7,7 +7,8 @@
     "# GUC3 – Fragen analysieren / Verteilung erkennen\n",
     "- Verteilung Fragen (Schwerpunkte)\n",
     "- Lücken?\n",
-    "- Genügend Expertiese for Ort? Personen gut ausgewählt?"
+    "- Genügend Expertiese for Ort? Personen gut ausgewählt?\n",
+    "- Leitfragen <-> Insights <-> HMW-Fragen"
    ]
   }
  ],
