--- a/notebooks/guc4.ipynb
+++ b/notebooks/guc4.ipynb
@@ -7,7 +7,8 @@
     "# GUC4 – Ideen analysiern / Verteilung erkennen\n",
     "- Verteilung Ideen (Schwerpunkte)\n",
     "- Muster, Auffälligkeiten?\n",
-    "- Genügend Expertiese for Ort? Personen gut ausgewählt?"
+    "- Genügend Expertiese for Ort? Personen gut ausgewählt?\n",
+    "- Leitfragen <-> Insights <-> HMW-Fragen <-> Ideen => Lücken?"
    ]
   }
  ],
