--- a/notebooks/guc2.ipynb
+++ b/notebooks/guc2.ipynb
@@ -25,7 +25,7 @@
     "Kontext von Stadt und Stadtgesellschaft.\n",
     "\n",
     "Zu Beginn des Stiftungsprojekts wurden im Rahmen des Formats \"Admin Lab\" die heterogenen Perspektiven und Expertisen \n",
-    "aus der Stadtverwaltung auf das Thema Bildung genutzt um Themen und Fragen (=Leitfragen) zu entwickelt.\n",
+    "aus der Stadtverwaltung auf das Thema Bildung genutzt um Themen und Fragen (=Leitfragen) zu entwickeln.\n",
     "\n",
     "Anschließend wurden in den vier Regionalwerkstätten in den vier Himmelsrichtungen von München verschiedensten Personen aus dem \n",
     "Bildungsbereich in München zu einer Workshop-Reihe eingeladen. Ziel war es, Wissen und Erfahrungen aus unterschiedlichen Bereichen \n",
@@ -50,63 +50,90 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# WIP (Meli Review)\n",
+    "# WIP (Meli Review) -> Insight = Kernaussage bestehend aus Herausforderungen und Chancen ???\n",
+    "# GPT: spezifisches Beispiel und eine konkrete Herausforderung\n",
+    "# GPT: konkrete Probleme und deren Ursachen zu identifizieren und zusammenzuführen\n",
+    "\n",
+    "# Aktuelles Probleme: \n",
+    "# - Zeilennummern passen nicht.\n",
+    "# - Beispiele sind nicht aussagekräftig genug\n",
+    "# - ggf. 3 durchläufge\n",
+    "\n",
     "guc2_key_insights = \"\"\"\n",
     "Deine Aufgabe besteht darin sogenannte Insights zu erstellen.\n",
     "\n",
     "Fokusiere dich bei der Erstellung der Insights darauf, dass dein Ergebnis die folgenden 3 Regeln einhält:\n",
-    "i) Ein Insight extrahiert den relevanten und prägnanten Inhalt einer Zeile in den Spalten \"Titel des Beispiels\", \"1) Beschreibe Dein konkretes Beispiel.\", \"2) Was läuft gut oder schlecht?\", \"3) Woran liegt es, dass es so läuft?\" zu einer Kernaussage in 20-45 Wörter.\n",
+    "i) Ein Insight extrahiert relevante Herausforderungen und Chancen aus dem Inhalt einer Zeile in den Spalten \"Titel des Beispiels\", \"1) Beschreibe Dein konkretes Beispiel.\", \"2) Was läuft gut oder schlecht?\", \"3) Woran liegt es, dass es so läuft?\" zu einer Kernaussage in 20-45 Wörter.\n",
     "ii) Konkrete Bezeichnungen wie zum Beispiel Ort und Name müssen in dem Insight enthalten sein. \n",
     "iii) Insights müssen einheitlich wie folgt strukturiert sein: \"<A> + [WEIL, UND, ABER, DESWEGEN, DARUM] + <B> + [WEIL, UND, ABER, DESWEGEN, DARUM] + <C>\". <B> und <C> sind optional. \n",
     "\n",
-    "Hier wurden bereits 2 Insights auf Basis der Regeln und Daten aus Zeile 2 und 4 erstellt:\n",
+    "Bearbeite nun folgende Aufgabe Schritt für Schritt und generiere deine fertige Antwort im JSON Format mit folgender Struktur:\n",
     "{\n",
-    "    \"Aufgabe\": \"Erstelle einen Insight für Zeile 2\",\n",
-    "    \"Antwort\": {\n",
-    "        \"Datei\": <Dateiname>,\n",
-    "        \"Zeile\": 2,\n",
-    "        \"Insight\": \"Besonders in Stadtteilen in denen Kinder ein höheres Maß an sprachlicher Förderung benötigen bleibt diesen der Zugang oft verwährt WEIL es unter anderem auch stark vom Einsatz der Eltern abhängt UND diese brauchen aber mehr Unterstützung.\"  \n",
-    "    },\n",
-    "    \"Aufgabe\": \"Erstelle einen Insight für Zeile 4\",\n",
-    "    \"Antwort\": {\n",
-    "        \"Datei\": <Dateiname>,\n",
-    "        \"Zeile\": 4,\n",
-    "        \"Insight\": \"An meiner Berufsschule gibt es die Empfehlung, 5 Minuten \"Bürogymnastik\" in den Unterricht zu integrieren ABER die Lehrkräfte wollen keine Unterrichtszeit dafür opfern.\"\n",
-    "    },\n",
+    "    \"Zeile\": <Zeile>,\n",
+    "    \"Insight\": <Insight>\n",
     "}\n",
-    "\n",
-    "Bearbeite nun folgende Aufgabe Schritt für Schritt:\n",
-    "1. Erstelle einen Insight für Zeile 8\n",
-    "2. Gebe in 1 Satz an wie ich das Prompt optimieren kann.\n",
+    "1. Erstelle einen Insight für Zeile 2.\n",
+    "2. Vergleiche deine Antwort mit der Musterlösung und optimiere dein Vorgehen: {\n",
+    "    \"Zeile\": 2,\n",
+    "    \"Insight\": \"Besonders in Stadtteilen in denen Kinder ein höheres Maß an sprachlicher Förderung benötigen bleibt diesen der Zugang oft verwährt WEIL es unter anderem auch stark vom Einsatz der Eltern abhängt UND diese brauchen aber mehr Unterstützung.\"  \n",
+    "}\n",
+    "3. Erstelle einen Insight für Zeile 4.\n",
+    "4. Vergleiche deine Antwort mit der Musterlösung und optimiere dein Vorgehen: {\n",
+    "    \"Zeile\": 4,\n",
+    "    \"Insight\": \"An meiner Berufsschule gibt es die Empfehlung, 5 Minuten \"Bürogymnastik\" in den Unterricht zu integrieren ABER die Lehrkräfte wollen keine Unterrichtszeit dafür opfern.\"  \n",
+    "}\n",
+    "5. Erstelle einen Insight für Zeile 8.\n",
     "\"\"\"\n",
     "\n",
     "# GPT:\n",
-    "# ## Insight für Zeile 8:\n",
+    "# ## Optimierung A:\n",
+    "# Die Musterlösung legt Wert darauf, konkrete Probleme und deren Ursachen zu identifizieren und zusammenzuführen. \n",
+    "# Ich werde diesen Ansatz in zukünftigen Insights weiter verfolgen und sicherstellen, dass die konkreten Herausforderungen \n",
+    "# und Lösungsansätze klar herausgestellt werden.\n",
     "#\n",
+    "# ## Optimierung B:\n",
+    "# Mein Insight konzentrierte sich auf die allgemeine Verbesserung der Kommunikation, ohne spezifische Details anzuführen. \n",
+    "# Die Musterlösung hingegen hebt ein spezifisches Beispiel hervor und erläutert eine konkrete Herausforderung. \n",
+    "# Ich werde in Zukunft versuchen, mehr Detailreichtum und Spezifität in meine Insights einzubauen.\n",
+    "#\n",
+    "# ## Insight für Zeile 8:\n",
+    "# In der Mittelschule kommt es zu Diskriminierung sowohl durch Schülerinnen als auch Lehrerinnen \n",
+    "# WEIL Aufklärung und Bewusstsein fehlen \n",
+    "# UND Stereotype einen zu großen Einfluss haben.\n",
     "\n",
     "# USER:\n",
     "# Erstelle einen Insight für Zeile 6.\n",
     "\n",
     "# GPT:\n",
     "# ## Insight für Zeile 6:\n",
-    "# \n",
+    "# Gesundheitsthemen sind im Lehrplan kaum verankert, was zu unzureichender Abdeckung im Schulalltag führt, \n",
+    "# WEIL die Entscheidung und das Engagement einzelner Lehrkräfte ausschlaggebend sind.\n",
     "\n",
     "# USER:\n",
     "# Erstelle einen Insight für Zeile 7.\n",
     "\n",
     "# GPT:\n",
     "# ## Insight für Zeile 7:\n",
-    "# \n",
+    "# Bildungsgerechtigkeit und Chancengleichheit sind abhängig von individuellen Schüler*innensituationen \n",
+    "# UND dem Engagement der Verantwortlichen sowie dem verfügbaren Budget, \n",
+    "# DESWEGEN variiert die Qualität der Umsetzung stark.\n",
     "\n",
     "# USER:\n",
-    "# Erstelle jeweils einen Insight für Zeile 9 und 10.\n",
+    "# Erstelle einen Insight für Zeile 9.\n",
     "\n",
     "# GPT:\n",
     "# ## Insight für Zeile 9:\n",
-    "#\n",
-    "#\n",
-    "# ## Insight für Zeile 10:\n",
-    "#"
+    "# Die Zusammenarbeit aller Gruppen (Lehrer, Eltern, Schüler) ist essentiell, \n",
+    "# ABER es bestehen Herausforderungen in der Kooperation, \n",
+    "# WEIL Engagement und aktive Teilnahme aller Beteiligten entscheidend sind.\n",
+    "\n",
+    "# USER:\n",
+    "# Erstelle einen Insight für Zeile 11.\n",
+    "\n",
+    "# GPT:\n",
+    "# ## Insight für Zeile 11:\n",
+    "# Individuelle Förderung wird durch schulpsychologische Beratung und Mediatoren unterstützt, \n",
+    "# ABER strukturelle Vorgaben und Raumsituationen schränken diese Bemühungen oft ein.\n"
    ]
   },
   {
@@ -122,7 +149,7 @@
     "    \"Datei\": <Dateiname>,\n",
     "    \"1,2\": [{<Kategorie>: <Zusammenfassung>]}]\n",
     "}\n",
-    "1. Gruppiere alle Key-Insights in der Spalte \"Insight\" nach der zugehörigen Kategorie in der Spalte \"Kategorie\" und update entsprechend das JSON.\n",
+    "1. Gruppiere alle Insights in der Spalte \"Insight\" nach der zugehörigen Kategorie in der Spalte \"Kategorie\" und update entsprechend das JSON.\n",
     "2. Fasse pro Gruppe die wichtigsten Erkentnisse in 1-2 Sätzen zusammen und update entsprechend das JSON.\n",
     "3. Gebe in 1 Satz an wie ich das Prompt optimieren kann.\n",
     "\"\"\"\n",
@@ -185,7 +212,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "guc2_key_insights_OLD = \"\"\"\n",
+    "guc2_key_insights_OLD_A = \"\"\"\n",
     "Deine Aufgabe besteht darin sogenannte Key-Insights zu generieren.\n",
     "- Key-Insights fassen die Antwort einer Leitfrage in Spalte \"Leitfrage\" auf die wichtigsten Informationen in 20-45 Wörter zusammen.\n",
     "- Die Antwort besteht aus den Spalten \"Titel des Beispiels\", \"1) Beschreibe Dein konkretes Beispiel.\", \"2) Was läuft gut oder schlecht?\", \"3) Woran liegt es, dass es so läuft?\".\n",
@@ -252,7 +279,36 @@
     "# ## Key-Insight für die Antwort in Zeile 9:\n",
     "# Diskriminierung in Mittelschulen wird oft übersehen,\n",
     "# WEIL zu wenig Aufklärung und zu großer Einfluss von Vorurteilen bestehen,\n",
-    "# DESWEGEN müssen gezielte Aufklärungsmaßnahmen eingeführt werden."
+    "# DESWEGEN müssen gezielte Aufklärungsmaßnahmen eingeführt werden.\n",
+    "\n",
+    "guc2_key_insights_OLD_B = \"\"\"\n",
+    "Deine Aufgabe besteht darin sogenannte Insights zu erstellen.\n",
+    "\n",
+    "Fokusiere dich bei der Erstellung der Insights darauf, dass dein Ergebnis die folgenden 3 Regeln einhält:\n",
+    "i) Ein Insight extrahiert relevante Herausforderungen und Chancen aus dem Inhalt einer Zeile in den Spalten \"Titel des Beispiels\", \"1) Beschreibe Dein konkretes Beispiel.\", \"2) Was läuft gut oder schlecht?\", \"3) Woran liegt es, dass es so läuft?\" zu einer Kernaussage in 20-45 Wörter.\n",
+    "ii) Konkrete Bezeichnungen wie zum Beispiel Ort und Name müssen in dem Insight enthalten sein. \n",
+    "iii) Insights müssen einheitlich wie folgt strukturiert sein: \"<A> + [WEIL, UND, ABER, DESWEGEN, DARUM] + <B> + [WEIL, UND, ABER, DESWEGEN, DARUM] + <C>\". <B> und <C> sind optional. \n",
+    "\n",
+    "Hier wurden bereits 2 Insights auf Basis der Regeln und Daten aus Zeile 2 und 4 erstellt:\n",
+    "{\n",
+    "    \"Aufgabe\": \"Erstelle einen Insight für Zeile 2\",\n",
+    "    \"Antwort\": {\n",
+    "        \"Datei\": <Dateiname>,\n",
+    "        \"Zeile\": 2,\n",
+    "        \"Insight\": \"Besonders in Stadtteilen in denen Kinder ein höheres Maß an sprachlicher Förderung benötigen bleibt diesen der Zugang oft verwährt WEIL es unter anderem auch stark vom Einsatz der Eltern abhängt UND diese brauchen aber mehr Unterstützung.\"  \n",
+    "    },\n",
+    "    \"Aufgabe\": \"Erstelle einen Insight für Zeile 4\",\n",
+    "    \"Antwort\": {\n",
+    "        \"Datei\": <Dateiname>,\n",
+    "        \"Zeile\": 4,\n",
+    "        \"Insight\": \"An meiner Berufsschule gibt es die Empfehlung, 5 Minuten \"Bürogymnastik\" in den Unterricht zu integrieren ABER die Lehrkräfte wollen keine Unterrichtszeit dafür opfern.\"\n",
+    "    },\n",
+    "}\n",
+    "\n",
+    "Bearbeite nun folgende Aufgabe Schritt für Schritt:\n",
+    "1. Erstelle einen Insight für Zeile 8\n",
+    "2. Gebe in 1 Satz an wie ich das Prompt optimieren kann.\n",
+    "\"\"\""
    ]
   }
  ],
