--- a/notebooks/guc1.ipynb
+++ b/notebooks/guc1.ipynb
@@ -32,7 +32,7 @@
     "Kontext von Stadt und Stadtgesellschaft.\n",
     "\n",
     "Zu Beginn des Stiftungsprojekts wurden im Rahmen des Formats \"Admin Lab\" die heterogenen Perspektiven und Expertisen \n",
-    "aus der Stadtverwaltung auf das Thema Bildung genutzt um Themen und Fragen (=Leitfragen) zu entwickelt.\n",
+    "aus der Stadtverwaltung auf das Thema Bildung genutzt um Themen und Fragen (=Leitfragen) zu entwickeln.\n",
     "\n",
     "Anschließend wurden in den vier Regionalwerkstätten in den vier Himmelsrichtungen von München verschiedensten Personen aus dem \n",
     "Bildungsbereich in München zu einer Workshop-Reihe eingeladen. Ziel war es, Wissen und Erfahrungen aus unterschiedlichen Bereichen \n",
@@ -487,7 +487,7 @@
     "# Optional für weitere Analyse-Ideen\n",
     "guc1_was_analysieren = \"\"\"\n",
     "Was wäre besonders spannend zu analysieren basierend auf den vorliegenden Daten aus der Regionalwerkstatt Nord?\n",
-    "Liste fünf Vorschläge auf.\n",
+    "Liste 5 Vorschläge auf.\n",
     "\"\"\""
    ]
   },
