--- a/notebooks/guc2.ipynb
+++ b/notebooks/guc2.ipynb
@@ -50,9 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ANMERKUNG ZUM PROMPT:\n",
-    "# Was ich von der HSS wusste: Insight = Kernaussage bestehend aus Herausforderungen und Chancen.\n",
-    "# Durch das Feedback von GPT konnte ich immer genauer spezifizieren was ein Insight ausmacht; siehe Regeln.\n",
+    "# PROMPT ENTWICKLUNG siehe guc2_key_insights_OPTIMIERUNG.\n",
     "\n",
     "guc2_key_insights = \"\"\"\n",
     "Deine Aufgabe besteht darin sogenannte Insights zu erstellen.\n",
@@ -216,6 +214,44 @@
     "# ## Optimierung des Prompts:\n",
     "# Es wäre hilfreich, mehr Kontext über die spezifischen Anforderungen und das gewünschte Detailniveau \n",
     "# der Zusammenfassungen zu erhalten. Dies würde eine gezieltere und relevantere Analyse ermöglichen.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Durch das Feedback von GPT konnte ich immer genauer spezifizieren was ein Insight ausmacht => finale Regeln.\n",
+    "guc2_key_insights_OPTIMIERUNG = \"\"\"\n",
+    "Deine Aufgabe besteht darin sogenannte Insights zu erstellen.\n",
+    "\n",
+    "Fokusiere dich bei der Erstellung von Insights auf die folgenden 3 Regeln:\n",
+    "i) Insights werden präzise und prägnant in 20-45 Wörter formuliert.\n",
+    "ii) Insights müssen wie folgt strukturiert sein: \"<A> + [WEIL, UND, ABER, DESWEGEN, DARUM] + <B> + [WEIL, UND, ABER, DESWEGEN, DARUM] + <C>\". <B> und <C> sind optional. \n",
+    "iii) Für einen Insight ist ausschließlich der Inhalt einer Zeile (Tupel) in den Spalten \"Titel des Beispiels\", \"1) Beschreibe Dein konkretes Beispiel.\", \"2) Was läuft gut oder schlecht?\", \"3) Woran liegt es, dass es so läuft?\" relevant.\n",
+    "\n",
+    "Bearbeite nun folgende Aufgabe Schritt für Schritt und generiere deine fertige Antwort im JSON Format mit folgender Struktur:\n",
+    "{\n",
+    "    \"Tupel\": <Nummer>,\n",
+    "    \"Insight\": <Insight>\n",
+    "}\n",
+    "1. Erstelle einen Insight für das 2. Tupel.\n",
+    "2. Was kannst du beim Erstellen von Insights verbessern? Vergleiche dazu deine Antwort mit folgender Musterlösung: {\n",
+    "    \"Tupel\": 2,\n",
+    "    \"Insight\": \"Trotz Vorliegen des Übertritts-Zeugnisses haben Kinder aus Familien mit Migrationshintergrund eine geringere Chance auf einen Gymnasiums-Platz WEIL es im Münchner Norden zu wenig Gymnasien gibt UND Sprachbarrieren der Eltern eine Barriere bei formellen Notwendigkeiten darstellen.\",\n",
+    "}\n",
+    "3. Erstelle einen Insight für das 3. Tupel.\n",
+    "4. Was kannst du beim Erstellen von Insights verbessern? Vergleiche dazu deine Antwort mit folgender Musterlösung: {\n",
+    "    \"Tupel\": 3,\n",
+    "    \"Insight\": \"An meiner Berufsschule gibt es die Empfehlung, 5 Minuten \"Bürogymnastik\" in den Unterricht zu integrieren ABER die Lehrkräfte wollen keine Unterrichtszeit dafür opfern.\"  \n",
+    "}\n",
+    "5. Ertselle einen Insight für das 4. Tupel.\n",
+    "6. Was kannst du beim Erstellen von Insights verbessern? Vergleiche dazu deine Antwort mit folgender Musterlösung: {\n",
+    "    \"Tupel\": 4,\n",
+    "    \"Insight\": \"Die Zusammenarbeit zwischen \"Gesund vor Ort\" (GSR) und dem lokalen Bildungsmanagement in der Gesundheitsbildung- und förderung funktioniert gut WEIL beide Seiten offen für Kooperation sind, Projekte gemeinsam finanziert, koordiniert und Expertisen gebündelt werden DESHALB steigt die Qualität der Angebote.\"  \n",
+    "}\n",
+    "\"\"\""
    ]
   }
  ],
