--- a/notebooks/guc2.ipynb
+++ b/notebooks/guc2.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "- Antworten generiert mit fine-funed GPT-4 \"Data Analysis\" via ChatGPT.\n",
     "- Beispielhaft an der Datei Regionalwerkstatt_Nord\n",
-    "- 3 Prompts"
+    "- 4 Prompts + 1 Dev_Prompt"
    ]
   },
   {
@@ -51,7 +51,6 @@
    "outputs": [],
    "source": [
     "# PROMPT ENTWICKLUNG siehe guc2_key_insights_OPTIMIERUNG.\n",
-    "\n",
     "guc2_key_insights = \"\"\"\n",
     "Deine Aufgabe besteht darin sogenannte Insights zu erstellen.\n",
     "Fokusiere dich bei der Erstellung von Insights auf die folgenden 5 Regeln:\n",
@@ -144,6 +143,25 @@
     "#                 WEIL er individuelle Unterstützung bietet, \n",
     "#                 ABER ist durch Stadtratsbeschlüsse und Kriterien begrenzt.\"\n",
     "# }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# IDEE: ChatGPT reviewed HSS Insights anhand der 5 Regeln.\n",
+    "guc2_insights_review = \"\"\"\n",
+    "\n",
+    "    <WIP>\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "# GPT:\n",
+    "#\n",
+    "#\n",
+    "#"
    ]
   },
   {
