--- a/notebooks/guc3.ipynb
+++ b/notebooks/guc3.ipynb
@@ -5,10 +5,12 @@
    "metadata": {},
    "source": [
     "# GUC3 – Fragen analysieren / Verteilung erkennen\n",
-    "- Verteilung Fragen (Schwerpunkte)\n",
-    "- Lücken?\n",
-    "- Genügend Expertiese for Ort? Personen gut ausgewählt?\n",
-    "- Leitfragen <-> Insights <-> HMW-Fragen"
+    "\n",
+    "1. Anzahl der Einträge.\n",
+    "2. Häufigkeitsverteilung Insights/Fragen.\n",
+    "3. Thematische Schwerpunkte (Fragen nach Thema gruppieren).\n",
+    "\n",
+    "=> Anzahl, Verteilung und Häufigkeiten wurden in GUC1 schon ausführlich behandelt.\n"
    ]
   },
   {
@@ -43,37 +45,6 @@
     "\n",
     "# GPT:\n",
     "# Bereit."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 1. Wieviele Einträge?\n",
-    "# 2. Häufigkeitsverteilung Insights/Fragen?\n",
-    "# 3. Thematische Schwerpunkte (Fragen nach Thema gruppieren)?\n",
-    "\n",
-    "guc3____ = \"\"\"\n",
-    "\n",
-    "<WIP>\n",
-    "\n",
-    "\"\"\"\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Optional für weitere Analyse-Ideen\n",
-    "guc1_was_analysieren = \"\"\"\n",
-    "Was wäre besonders spannend zu analysieren basierend auf den vorliegenden Daten?\n",
-    "Liste 5 Vorschläge auf.\n",
-    "\"\"\""
    ]
   }
  ],
