--- a/notebooks/guc4.ipynb
+++ b/notebooks/guc4.ipynb
@@ -5,10 +5,16 @@
    "metadata": {},
    "source": [
     "# GUC4 – Ideen analysiern / Verteilung erkennen\n",
-    "- Verteilung Ideen (Schwerpunkte)\n",
-    "- Muster, Auffälligkeiten?\n",
-    "- Genügend Expertiese for Ort? Personen gut ausgewählt?\n",
-    "- Leitfragen <-> Insights <-> HMW-Fragen <-> Ideen => Lücken?"
+    "\n",
+    "1. Anzahl der Einträge.\n",
+    "2. Häufigkeitsverteilung Fragen/Ideen.\n",
+    "3. Thematische Schwerpunkte (Fragen nach Thema gruppieren).\n",
+    "\n",
+    "=> Anzahl, Verteilung und Häufigkeiten wurden in GUC1 schon ausführlich behandelt.\n",
+    "\n",
+    "4. Potential Analyse (Sortieren nach Häufigkeit Fragen).\n",
+    "5. Insights VS Ideen -> Welche Herausforderung/Chance bleiben durch die Ideen ungelöst?\n",
+    "6. Insights VS Ideen -> Welche Herausforderung/Chance werden durch die Ideen gelöst?"
    ]
   },
   {
@@ -43,39 +49,6 @@
     "\n",
     "# GPT:\n",
     "# Bereit."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 1. Wieviele Einträge?\n",
-    "# 2. Häufigkeitsverteilung Ideen/Fragen?\n",
-    "# 3. Thematische Schwerpunkte (Ideen thematisch Gruppiern)?\n",
-    "# 4. Potential Analyse (Sortieren nach Häufigkeit Fragen)?\n",
-    "# 5. Insights VS Ideen -> Welche Herausforderung/Chance bleiben durch die Ideen ungelöst?\n",
-    "# 6. Insights VS Ideen -> Welche Herausforderung/Chance werden durch die Ideen gelöst?\n",
-    "\n",
-    "guc4____ = \"\"\"\n",
-    "\n",
-    "<WIP>\n",
-    "\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Optional für weitere Analyse-Ideen\n",
-    "guc1_was_analysieren = \"\"\"\n",
-    "Was wäre besonders spannend zu analysieren basierend auf den vorliegenden Daten?\n",
-    "Liste 5 Vorschläge auf.\n",
-    "\"\"\""
    ]
   }
  ],
